fix some layout issues

--- a/src/app/components/app.component.sass
+++ b/src/app/components/app.component.sass
@@ -18,6 +18,11 @@
 .app-container
   display: flex
   justify-content: center
+  width: 100vw
+  height: 100vh
+  overflow: hidden
+  margin: 0
+  padding: 0
 
 .selector-container
   margin-top: 50px
